css/index.css
/* RESET */
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    background-color: #0a001c;
    font-family: 'Satoshi', sans-serif;
    width: 100%;
    overflow-x: hidden;
}

/* LIGHT EFFECT */

body::after {
    content: "";
    position: fixed;
    inset: 0;
    background: radial-gradient(circle at 70% 40%, rgba(255, 255, 255, 0.08), transparent 60%);
    pointer-events: none;
    z-index: -1;
}




/* HERO */

.introduction {
    display: grid;
    grid-template-columns: 30% 70%;
    min-height: 100vh;
}

/* LEFT */
.screen {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.photo {
    position: relative;
    overflow: hidden;
    border-radius: 15px;
    transform: translateX(30px);
}

.photo img {
    width: 320px;
    display: block;
    border-radius: 15px;
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
}

/* effet holographic */

.photo::before {
    content: "";
    position: absolute;
    top: -50%;
    left: -50%;
    width: 200%;
    height: 200%;
    background: linear-gradient(0deg, transparent, transparent 30%, rgba(106, 156, 165, 0.35));
    transform: rotate(-45deg);
    transition: transform 0.6s ease;
    pointer-events: none;
}

/* hover */

.photo:hover::before {
    transform: rotate(-45deg) translateY(100%);
}


/* RIGHT */

.hero-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 120px 80px;
    color: whitesmoke;
}


.hero-right h2 {
    font-size: 48px;
    line-height: 1.1;
    margin-bottom: 20px;
    color: whitesmoke;
    ;
}

.hero-right p {
    color: whitesmoke;
    ;
}

.hero-right h3 {
    color: whitesmoke;
    ;
}

.wave {
    display: inline-block;
    animation: wave-animation 2s infinite;
    transform-origin: 70% 70%;
}

@keyframes wave-animation {

    0% {
        transform: rotate(0deg);
    }

    10% {
        transform: rotate(14deg);
    }

    20% {
        transform: rotate(-8deg);
    }

    30% {
        transform: rotate(14deg);
    }

    40% {
        transform: rotate(-4deg);
    }

    50% {
        transform: rotate(10deg);
    }

    60% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(0deg);
    }

}

.description {
    max-width: 700px;
    line-height: 1.6;
    margin-bottom: 40px;
}

/* BUTTON */
.cta {
    margin-top: 30px;
    padding: 14px 28px;
    border-radius: 8px;
    background: white;
    color: #0F0F12;
    border: 1px solid rgba(255, 255, 255, 0.2);
    cursor: pointer;
    transition: 0.3s;
    max-width: 200px;
    font-weight: bold;
    position: relative;
    overflow: hidden;
}

/* effet lumière */

.cta::before {
    content: "";
    position: absolute;
    top: 0;
    left: -100%;
    width: 50%;
    height: 100%;
    background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.4), transparent);
    transform: skewX(-25deg);
    transition: 0.6s;
}

/* animation au hover */

.cta:hover::before {
    left: 150%;
}

.cta:hover {
    background: #0F0F12;
    color: white;
    transform: translateY(-2px);
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
}



.projects {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: #EDDCC6;
    padding: 30px 80px;
    color: #0F0F12;
}

.title {
    text-align: center;
    margin-bottom: 1.5rem;
    color: #0F0F12;
    font-weight: bold;
    font-size: 48px;
}

/* new container*/
.front-end {
    display: flex;
    flex-direction: row;
    gap: 40px;
    justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 20px;
}

.project-text {
    text-align: center;
    margin-bottom: 4.5rem;
}

.project-card {
    display: flex;
    flex-direction: column;
    width: 400px;
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
    border-radius: 15px;
    border: 1px solid rgba(43, 105, 251, 0.12);
    justify-content: space-between;
    background: rgb(250, 254, 255);
    box-shadow: rgb(250, 254, 255) 0px 0px 4rem 1rem;

}

.title-content {
    text-align: center;
    margin-bottom: 10px;
    font-size: 22px;
}

.project-content h3::after {
    content: "";
    display: block;
    width: 40px;
    height: 2px;
    background: #4fc4c0;
    margin: 8px auto 0;
}


/* hover effect */

.project-card:hover {
    transform: translateY(-8px);
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
}

.project-content {

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 1rem;
    padding: 0rem 1rem;
    color: rgb(10, 0, 27);

}



.project-info {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    margin: 0.5rem 0;

}

.image {
    width: 100%;
    height: 180px;
    object-fit: cover;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;


}

.tech-list {
    display: flex;
    gap: 10px;
    padding: 0;
    list-style: none;
}

.info {
    background: #4fc4c0;
    color: #0a001c;
    padding: 7px 20px;
    border-radius: 15px;
    font-size: 14px;
    font-weight: 600;
}

.info:hover {
    background: #4fc4c0;
    color: white;
    transform: translateY(-2px);
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
}

.project-button {
    display: flex;
    gap: 12px;
    margin-top: 15px;
    margin-bottom: 20px;
}

/* base button */

.btn {
    display: inline-flex;
    align-items: center;
    gap: 8px;
    padding: 10px 16px;
    border-radius: 8px;
    text-decoration: none;
    font-size: 14px;
    font-weight: 600;
    cursor: pointer;
    transition: 0.25s;
}

/* website button */

.website-btn {
    background: #0a001c;
    color: white;
}

/* github button */

.github-btn {
    background: #4fc4c0;
    color: #0a001c;
}

/* hover effect */

.btn:hover {
    transform: translateY(-2px);
    opacity: 0.9;
}

/* icon */

.icon {
    width: 16px;
    height: 16px;
}
/* ... */

